# hackerrank_cpp_practice

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: run_solution
solutions/001-hello/: CMakeLists.txt  main  main.cpp
solutions/basic-dtypes/: main.cpp
solutions/input-output/: CMakeLists.txt  main.cpp
solutions/playing-with-types/: main.cpp
solutions/pointers/: CMakeLists.txt
solutions/string-stream/: main.cpp
solutions/template/: main.cpp
